# Cerebrum

./: .dockerignore  .gitignore  COMPATIBILITY_REPORT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  Design_v2.md  END_TO_END_VERIFICATION.md  FIXES.md  GOOGLE_OAUTH_SETUP.md  LOCAL_SETUP.md  README.md  RUNBOOK.md  TASKS_SUMMARY.md  TechSpec.md  build-termux.sh  docker-compose.local.yml  docker-compose.yml  render-build.sh  render.yaml  requirements.txt
backend/: .docker_nocache  .dockerignore  BUILD_ID  CACHE_INVALIDATION  Dockerfile  Dockerfile.scheduler  Dockerfile.worker  README.md  __init__.py  db.py  deploy_trigger.txt  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  slack_webhook.py  start.sh  test_gdrive_fix.py  validation.py
backend/alembic/versions/: 001_empty.py  008_add_account_email.py  add_account_email_column.py  cf3ec9cca1a4_fix.py  cf3ec9cca1a4_ghost.py  cf3ec9cca1a4_ghost_migration.py
backend/api/: __init__.py  analytics.py  analytics_reports_system.py  openai_test.py  projects.py  upload.py  users.py  vision.py
backend/app/: __init__.py  main.py  tasks.py
backend/app/agent/: __init__.py  code_enhancement.py  core.py  endpoints.py  enhanced_core.py  enhanced_endpoints.py  enhancement_endpoints.py  planner.py  scheduler.py  self_modification.py  self_modification_endpoints.py  web_search.py  web_search_endpoints.py  websocket.py
backend/app/api/: README.md  deps.py  health.py
backend/app/coding/: __init__.py  endpoints.py  generator.py  prompts.py  templates.py
backend/app/connectors/: __init__.py  factory.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  cors.py  deps.py  encryption.py  logging.py  network.py  rate_limit.py  retry.py  sentry.py  transaction.py  vault.py
backend/app/db/: __init__.py  base_class.py  cleanup.py  (+6 more)
backend/backend/: db.py  models.py  requirements.txt  slack_webhook.py  validation.py
backend/events/: __init__.py  emitter.py
backend/hydration/: __init__.py  runner.py
backend/learning/: __init__.py  reasoning_model.py  trainer.py
backend/scripts/: backup_cron.sh  backup_db.py  migrate.py  noop_worker.py  render_start.sh  restore_drill.sh  scheduler_start.sh  seed.py  worker_entrypoint.sh  worker_start.sh
backend/services/: __init__.py  action_item_extractor.py  analytics_engine.py  audit.py  billing.py  cicd.py  consolidated_takeoff.py  document_classifier.py  entitlements.py  feature_flags.py  google_drive.py  intent_router.py  load_balancer.py  notifications.py  observability.py  rag_engine.py  tenancy.py  vector_memory.py
backend/tests/: conftest.py  test_services.py  test_smoke.py
(+502 files in other folders)
